--- a/sendmail/templates/base.html
+++ b/sendmail/templates/base.html
@@ -94,7 +94,7 @@
         {% endblock %}     
         
         <!-- Footer Grid -->
-        <footer class="sticky top-[100vh] mb-0 bottom-0 h-screen">    
+        <footer class="bottom-0">    
             <!-- Social Media -->
             <div class="text-white flex justify-center p-0 space-x-6">
                 <a href="#" class="hover:text-green-400 dark:hover:text-white">
