--- a/sendmail/templates/nobirthday.html
+++ b/sendmail/templates/nobirthday.html
@@ -42,9 +42,9 @@
                 <a href="https://www.wcce.org.ng" target="_blank"><img src="{% static 'img/mitc-logo-trans.png' %}" class="logo"></a>
             </div>
             <div class="w3-display-middle">
-                <h1 class="w3-jumbo w3-center">NO BIRTHDAYS TODAY</h1>
+                <h1 class="w3-jumbo w3-center">NO BIRTHDAY TODAY</h1>
                 <hr class="w3-border-white" style="margin:auto;width:40%">
-                <p class="w3-large w3-center">Why Na!</p>
+                <p class="w3-large w3-center">Hopefully tomorrow</p>
             </div>
             <div class="w3-large w3-center w3-display-bottommiddle w3-padding-large">
                 <a href="https://www.wcce.org.ng" target="_blank" style="text-decoration: none">MITC, Edo State</a>
