--- a/sendmail/templates/emailsent.html
+++ b/sendmail/templates/emailsent.html
@@ -7,17 +7,17 @@
 
 {% block content %}
     <!-- Content Grid-->
-    <div class="grid flex-col px-4 items-center gap-y-20 h-screen justify-center">
+    <div class="grid flex-col px-4 items-center h-screen justify-center">
 
         <!-- Subheader -->
         <div class="w-full overflow-hidden">
             <h1 class="text-3xl mt-8 text-white font-semibold text-center w-auto">
-                The following Staff have Birthdays today. <br>Birthdays Felicitations have been sent to them
+                We have Birthdays today.
             </h1>
         </div>
 
         <!-- Table -->
-        <div class="grid flex justify-center -mt-24 -mb-2 overflow-x-scroll border border-b shadow-md sm:square-lg">
+        <div class="grid flex justify-center -mt-2 -mb-2 overflow-x-scroll border border-b shadow-md sm:square-lg">
             <table class="w-100 text-md p-8 text-center text-gray-500 dark:text-gray-400">
                 <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
@@ -63,10 +63,10 @@
         </div>
 
         <!-- Hip Hurray -->
-        <div class="flex justify-center -mt-32">
+        <!-- <div class="flex justify-center -mt-32">
             <h1 class="text-3xl text-white font-semibold text-center">
                 Hip Hip Hip Hurray!!
             </h1>
-        </div>
+        </div> -->
     </div>
 {% endblock %}
