code update 10:20am

--- a/sendmail/templates/emailsent.html
+++ b/sendmail/templates/emailsent.html
@@ -11,13 +11,14 @@
 
         <!-- Subheader -->
         <div class="w-full overflow-hidden">
-            <h1 class="text-3xl mt-8 text-white font-semibold text-center w-auto">
-                We have Birthdays today.
+            <h1 class="text-3xl text-white font-semibold text-center w-auto">
+                The following Staff have Birthdays today.<br>
+                Birthday Felicitations have been sent to them
             </h1>
         </div>
 
         <!-- Table -->
-        <div class="grid flex justify-center -mt-2 -mb-2 overflow-x-scroll border border-b shadow-md sm:square-lg">
+        <div class="grid flex justify-center -mt-28 -mb-2 overflow-x-auto border border-b shadow-md sm:square-lg">
             <table class="w-100 text-md p-8 text-center text-gray-500 dark:text-gray-400">
                 <thead class="text-xs text-gray-700 uppercase bg-gray-100 dark:bg-gray-700 dark:text-gray-400">
                     <tr>
