--- a/sendmail/templates/bmessage_2.html
+++ b/sendmail/templates/bmessage_2.html
@@ -1,46 +1,47 @@
+{% load static %}
 {% load tailwind_tags %}
+
 <!doctype html>
 <html dir="ltr">  
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">              
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        {% tailwind_preload_css %}       
         {% tailwind_css %}
+        <style>
+            @font-face {
+                font-family: 'Sigmar One';
+                font-style: normal;
+                font-weight: 400;
+                font-display: swap;
+                src: url(https://fonts.gstatic.com/s/sigmarone/v15/co3DmWZ8kjZuErj9Ta3do6Tppg.woff2) format('woff2');
+                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+            }
+        
+            @font-face {
+                font-family: 'Antonio';
+                font-style: normal;
+                font-weight: 400;
+                font-display: swap;
+                src: url(https://fonts.gstatic.com/s/antonio/v8/gNMbW3NwSYq_9WD34ngK5F8vR8T0PVxx8StPaWE.woff2) format('woff2');
+                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+            }
+        
+            @font-face {
+                font-family: 'Roboto';
+                font-style: normal;
+                font-weight: 300;
+                font-display: swap;
+                src: url(https://fonts.gstatic.com/s/roboto/v29/KFOlCnqEu92Fr1MmSU5fBBc4.woff2) format('woff2');
+                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+            }
+        </style>
     </head>
 
-    <div style="background-color: white;margin: 0 auto;text-align: center;width: 800px;outline: thin 1px black;text-align: center;">
-        <body style="background-color: white;margin: 0;">
-            <div>
-                <style>
-                    @font-face {
-                        font-family: 'Sigmar One';
-                        font-style: normal;
-                        font-weight: 400;
-                        font-display: swap;
-                        src: url(https://fonts.gstatic.com/s/sigmarone/v15/co3DmWZ8kjZuErj9Ta3do6Tppg.woff2) format('woff2');
-                        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-                    }
-        
-                    @font-face {
-                        font-family: 'Antonio';
-                        font-style: normal;
-                        font-weight: 400;
-                        font-display: swap;
-                        src: url(https://fonts.gstatic.com/s/antonio/v8/gNMbW3NwSYq_9WD34ngK5F8vR8T0PVxx8StPaWE.woff2) format('woff2');
-                        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-                    }
-        
-                    @font-face {
-                        font-family: 'Roboto';
-                        font-style: normal;
-                        font-weight: 300;
-                        font-display: swap;
-                        src: url(https://fonts.gstatic.com/s/roboto/v29/KFOlCnqEu92Fr1MmSU5fBBc4.woff2) format('woff2');
-                        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-                    }
-                </style>
-            </div>
-            <img src="https://github.com/ethernalarts/bday-msg/raw/main/templates/img/bday-banner.jpg"
+    <body class="h-screen bg-gray-50 mx-auto text-center w-800 outline: thin 1px black;text-align: center;">
+        <div class="container">
+            <img src="{% static 'img/bday-banner.jpg' %}
                 style="display: block;margin: 0 auto;max-width: 800px;width: 100%;height: 100%;">
             <img src="https://github.com/ethernalarts/bday-msg/raw/main/templates/img/edsg2.png"
                 style="display: block;margin: 35px auto 40px;max-width: 130px;width: 100%;height: 100%;max-height: 130px;">
@@ -91,8 +92,6 @@
                     All Rights Reserved.
                 </p>            
             </footer>
-        </body>
-            
-        
-    </div>       
+        </div>     
+    </body>       
 </html>
