--- a/sendmail/templates/bmessage_2.html
+++ b/sendmail/templates/bmessage_2.html
@@ -9,88 +9,89 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% tailwind_preload_css %}       
         {% tailwind_css %}
-        <style>
-            @font-face {
-                font-family: 'Sigmar One';
-                font-style: normal;
-                font-weight: 400;
-                font-display: swap;
-                src: url(https://fonts.gstatic.com/s/sigmarone/v15/co3DmWZ8kjZuErj9Ta3do6Tppg.woff2) format('woff2');
-                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-            }
-        
-            @font-face {
-                font-family: 'Antonio';
-                font-style: normal;
-                font-weight: 400;
-                font-display: swap;
-                src: url(https://fonts.gstatic.com/s/antonio/v8/gNMbW3NwSYq_9WD34ngK5F8vR8T0PVxx8StPaWE.woff2) format('woff2');
-                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-            }
-        
-            @font-face {
-                font-family: 'Roboto';
-                font-style: normal;
-                font-weight: 300;
-                font-display: swap;
-                src: url(https://fonts.gstatic.com/s/roboto/v29/KFOlCnqEu92Fr1MmSU5fBBc4.woff2) format('woff2');
-                unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-            }
-        </style>
     </head>
 
-    <body class="h-screen bg-gray-50 mx-auto text-center w-800 outline: thin 1px black;text-align: center;">
-        <div class="container">
-            <img src="{% static 'img/bday-banner.jpg' %}
-                style="display: block;margin: 0 auto;max-width: 800px;width: 100%;height: 100%;">
-            <img src="https://github.com/ethernalarts/bday-msg/raw/main/templates/img/edsg2.png"
-                style="display: block;margin: 35px auto 40px;max-width: 130px;width: 100%;height: 100%;max-height: 130px;">
-            <p style="margin: 20px 0;font-size: 1.6em;font-family: Arial, Helvetica, sans-serif;text-align: center;font-weight: bold;color: green;">
+    <body class="h-screen bg-gray-100">
+        <div class="font-sans container pb-4 text-center mx-auto bg-white w-[800px]">
+            <img src="{% static 'img/bday-banner.jpg' %}" class="block mx-auto max-w-[800px] w-full h-full">
+            <img src="{% static 'img/edsg2.png' %}" class="block mx-auto mt-4 max-w-[130px] w-full h-full max-h-[130px]">
+            <p class="m-8 mx-auto text-3xl font-bold text-green-600">
                 Dear {{ NAME }},
             </p><br>
-            <p style="margin: 10px auto 0;font-size: 1.3em;font-family:'Roboto', sans-serif;font-weight: light;inline-size: 400px;overflow-wrap: break-word;text-align: center;">
+            <p class="font-sans -mt-2 px-8 w-full mx-auto text-2xl text-darkgray font-medium max-w-[700px] overflow-wrap-break-word">
                 Today, on your special day we celebrate you,<br>
                 and we'd like you to know how valuable you are to us.
                 We thank you for all the good work you have done
                 and wish you the very best life has to offer always.</p><br>
-            <img src="https://github.com/ethernalarts/bday-msg/raw/main/templates/img/bbanner.jpg" 
-                style="display: block;margin: 10px auto 0;max-width: 760px;">
+            <img src="{% static 'img/bbanner.jpg' %}" class="block mx-auto mt-4 max-w-[760px]">
                             
-            <p style="margin-top: 20px;font-size: 1.3em;font-family: Arial, Helvetica, sans-serif;font-weight: normal;text-align: center;">From all of us at
-                the<br>
-            <h1 style="margin-top: -15px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;text-align: center;">MINISTRY OF INDUSTRY, TRADE <br>AND
+            <p class="mt-4 text-2xl font-medium">From all of us at the<br>
+            <h1 class="mt-4 text-[1.65em] text-green-600 font-bold">MINISTRY OF INDUSTRY, TRADE <br>AND
                 COOPERATIVES</h1>
             </p>
-            <img src="https://github.com/ethernalarts/bday-msg/raw/main/templates/img/new-mitc-logo.png" 
-                style="display: block;margin: 40px auto 0;max-width: 180px;width: 100%;height: 100%;max-height: 170px;"><br>
-            <p style="margin-top: 20px;font-size: 1.6em;font-family: 'Roboto', sans-serif;font-weight: 400;">
-            <h2 style="margin-top: -10px;font-size: 1.3em;font-family: Arial, Helvetica, sans-serif;font-weight: 400;text-align: center;">Courtsey:</h2>
-            <h1 style="margin-top: -10px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;text-align: center;">Digital Marketing Unit, <br>
-                Department of Trade Promotions and Marketing</h1><br>
+            <img src="{% static 'img/mitc-logo-trans.png' %}" class="block mx-auto mt-8 max-w-[150px] w-full h-full max-h-[150px]"><br>
+            <p><h2 class="m-4 text-2xl font-medium">Courtsey:</h2>
+                <h1 class="mt-4 mb-8 text-2xl text-green-600 font-bold">Digital Marketing Unit, <br>
+                    Department of Trade Promotions and Marketing
+                </h1>
+                <br>
             </p>
 
-            <hr style="color: limegreen;margin: 0 60px;">
+            <!-- <hr class="text-green-600 m-8 px-8 h-2 mx-auto"> -->
 
-            <footer style="text-align: center;font-size: 0.75em;background-color: none;padding: 0;margin-bottom: 0px;width: 800px;height: 360px;font-family: Arial, Helvetica, sans-serif;overflow: hidden;bottom: 0;">        
-                <p style="margin-top: 20px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: darkgreen;margin: 40px 0 -10px;text-align: center">VISIT US</p>                           
-                <p class="footer" style="margin-top: 20px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;font-weight: 400;text-align: center;color: green;">7th Floor, Block C, Secretariat Complex, Sapele Road,<br>
-                    Benin City, Edo State, Nigeria.
-                </p>
-                <p class="footerCONTACT-h2" style="margin-top: 20px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;font-weight: bold;color: darkgreen;margin: 40px 0 -10px;text-align: center">CONTACT US</p>
-                <p class="footer" style="margin-top: 20px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;font-weight: 400;text-align: center;color: green;">
-                    Tel: +234 909 601 5355 | Website: <a href="https://www.wcce.org.ng" target="_blank" style="color: green;cursor: pointer;text-decoration: underline;">https://www.wcce.org.ng</a><br>
-                    Email: <a href="mailto:itc@edostate.gov.ng" style="color: green;cursor: pointer;text-decoration: underline;">mitc@edostate.gov.ng</a>
-                </p>
-                <!-- <p class="footerCONTACT-h2" style="margin-top: 20px;font-size: 1.6em;font-family: 'Antonio', sans-serif;font-weight: 400;color: lightgreen;margin: 40px 0 -10px;">FOLLOW US</p>
-                <p class="footer" style="margin-top: 20px;font-size: 1.6em;font-family: 'Roboto', sans-serif;font-weight: 400;">
-                    <a style="color: whitesmoke;cursor: pointer;text-decoration: none;">Facebook</a>
-                    | <a style="color: whitesmoke;cursor: pointer;text-decoration: none;">Instagram</a>
-                    | <a href="https://www.linkedin.com/in/edo-state-itc-b6b848234" target="blank" style="color: whitesmoke;cursor: pointer;text-decoration: none;">LinkedIn</a>
-                    | <a style="color: whitesmoke;cursor: pointer;text-decoration: none;">Twitter</a>
-                </p> --><br>
-                <p style="margin-top: 20px;font-size: 1.4em;font-family: Arial, Helvetica, sans-serif;font-weight: 400;text-align: center;color: green;">&copy; 2022 Edo State Ministry of Industry, Trade and Cooperatives<br>
-                    All Rights Reserved.
-                </p>            
+            <footer class="container mt-10 px-8 mb-4 bottom-0">
+                <div class="p-4 bg-gray-100">
+                    <p class="mt-4 text-[1.3em] font-bold text-green-600">VISIT US</p>                           
+                    <p class="mt-2 text-lg font-normal text-green-600">7th Floor, Block C, Secretariat Complex, Sapele Road,<br>
+                        Benin City, Edo State, Nigeria.
+                    </p>
+                    <p class="mt-10 text-[1.3em] font-bold text-green-600">CONTACT US</p>
+                    <p class="mt-2 text-lg font-normal text-green-600">Tel: +234 909 601 5355<br>
+                        Website: <a href="https://www.wcce.org.ng" target="_blank" class="text-green-400 underline">https://www.wcce.org.ng</a>
+                        <br>
+                        Email: <a href="mailto:itc@edostate.gov.ng" class="text-green-400 underline">mitc@edostate.gov.ng</a>
+                    </p>                
+                    <br>
+                
+                    <!-- Social Media -->
+                    <div class="mt-8 text-green-600 flex justify-center p-0 space-x-6">
+                        <a href="#" class="hover:text-green-400 dark:hover:text-white">
+                            <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M22 12c0-5.523-4.477-10-10-10S2 6.477 2 12c0 4.991 3.657 9.128 8.438 9.878v-6.987h-2.54V12h2.54V9.797c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.243 0-1.63.771-1.63 1.562V12h2.773l-.443 2.89h-2.33v6.988C18.343 21.128 22 16.991 22 12z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </a>
+                        <a href="#" class="hover:text-green-400 dark:hover:text-white">
+                            <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                                <path fill-rule="evenodd"
+                                    d="M12.315 2c2.43 0 2.784.013 3.808.06 1.064.049 1.791.218 2.427.465a4.902 4.902 0 011.772 1.153 4.902 4.902 0 011.153 1.772c.247.636.416 1.363.465 2.427.048 1.067.06 1.407.06 4.123v.08c0 2.643-.012 2.987-.06 4.043-.049 1.064-.218 1.791-.465 2.427a4.902 4.902 0 01-1.153 1.772 4.902 4.902 0 01-1.772 1.153c-.636.247-1.363.416-2.427.465-1.067.048-1.407.06-4.123.06h-.08c-2.643 0-2.987-.012-4.043-.06-1.064-.049-1.791-.218-2.427-.465a4.902 4.902 0 01-1.772-1.153 4.902 4.902 0 01-1.153-1.772c-.247-.636-.416-1.363-.465-2.427-.047-1.024-.06-1.379-.06-3.808v-.63c0-2.43.013-2.784.06-3.808.049-1.064.218-1.791.465-2.427a4.902 4.902 0 011.153-1.772A4.902 4.902 0 015.45 2.525c.636-.247 1.363-.416 2.427-.465C8.901 2.013 9.256 2 11.685 2h.63zm-.081 1.802h-.468c-2.456 0-2.784.011-3.807.058-.975.045-1.504.207-1.857.344-.467.182-.8.398-1.15.748-.35.35-.566.683-.748 1.15-.137.353-.3.882-.344 1.857-.047 1.023-.058 1.351-.058 3.807v.468c0 2.456.011 2.784.058 3.807.045.975.207 1.504.344 1.857.182.466.399.8.748 1.15.35.35.683.566 1.15.748.353.137.882.3 1.857.344 1.054.048 1.37.058 4.041.058h.08c2.597 0 2.917-.01 3.96-.058.976-.045 1.505-.207 1.858-.344.466-.182.8-.398 1.15-.748.35-.35.566-.683.748-1.15.137-.353.3-.882.344-1.857.048-1.055.058-1.37.058-4.041v-.08c0-2.597-.01-2.917-.058-3.96-.045-.976-.207-1.505-.344-1.858a3.097 3.097 0 00-.748-1.15 3.098 3.098 0 00-1.15-.748c-.353-.137-.882-.3-1.857-.344-1.023-.047-1.351-.058-3.807-.058zM12 6.865a5.135 5.135 0 110 10.27 5.135 5.135 0 010-10.27zm0 1.802a3.333 3.333 0 100 6.666 3.333 3.333 0 000-6.666zm5.338-3.205a1.2 1.2 0 110 2.4 1.2 1.2 0 010-2.4z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </a>
+                        <a href="#" class="hover:text-green-400 dark:hover:text-white">
+                            <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                                <path
+                                    d="M8.29 20.251c7.547 0 11.675-6.253 11.675-11.675 0-.178 0-.355-.012-.53A8.348 8.348 0 0022 5.92a8.19 8.19 0 01-2.357.646 4.118 4.118 0 001.804-2.27 8.224 8.224 0 01-2.605.996 4.107 4.107 0 00-6.993 3.743 11.65 11.65 0 01-8.457-4.287 4.106 4.106 0 001.27 5.477A4.072 4.072 0 012.8 9.713v.052a4.105 4.105 0 003.292 4.022 4.095 4.095 0 01-1.853.07 4.108 4.108 0 003.834 2.85A8.233 8.233 0 012 18.407a11.616 11.616 0 006.29 1.84" />
+                            </svg>
+                        </a>
+                        <a href="#" class="hover:text-green-400 dark:hover:text-white">
+                            <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 448 512" aria-hidden="true">
+                                <path
+                                    d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"
+                                    clip-rule="evenodd" />
+                            </svg>
+                        </a>
+                    </div>
+                
+                    <!-- Copyright -->
+                    <div class="text-green-600 mx-auto max-w-[600px] p-4 sm:flex sm:items-center sm:justify-between">
+                        <span class="text-md sm:text-center dark:text-gray-400">Copyright © 2022 <a href="https://wcce.org.ng"
+                                target="blank" class="hover:underline">Ministry of Industry, Trade and
+                                Cooperatives, Edo State</a>. All Rights Reserved.
+                        </span>
+                    </div>
+                </div>                     
             </footer>
         </div>     
     </body>       
