--- a/sendmail/templates/bmessage_2.html
+++ b/sendmail/templates/bmessage_2.html
@@ -41,20 +41,54 @@
 
             <footer class="container mt-10 px-8 mb-4 bottom-0">
                 <div class="p-4 bg-gray-100">
-                    <p class="mt-4 text-[1.3em] font-bold text-green-600">VISIT US</p>                           
-                    <p class="mt-2 text-lg font-normal text-green-600">7th Floor, Block C, Secretariat Complex, Sapele Road,<br>
-                        Benin City, Edo State, Nigeria.
-                    </p>
-                    <p class="mt-10 text-[1.3em] font-bold text-green-600">CONTACT US</p>
-                    <p class="mt-2 text-lg font-normal text-green-600">Tel: +234 909 601 5355<br>
-                        Website: <a href="https://www.wcce.org.ng" target="_blank" class="text-green-400 underline">https://www.wcce.org.ng</a>
-                        <br>
-                        Email: <a href="mailto:itc@edostate.gov.ng" class="text-green-400 underline">mitc@edostate.gov.ng</a>
-                    </p>                
-                    <br>
+                    
+                    <!-- Location -->
+                    <div class="mt-4 text-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" 
+                        class="w-7 h-7 mx-auto text-green-600" fill="currentColor" viewBox="0 0 384 512">
+                        <path d="M168.3 499.2C116.1 435 0 279.4 0 192C0 85.96 85.96 0 192 0C298 0 384 85.96 384 192C384 279.4 267 435 215.7 499.2C203.4 514.5 180.6 514.5 168.3 499.2H168.3zM192 256C227.3 256 256 227.3 256 192C256 156.7 227.3 128 192 128C156.7 128 128 156.7 128 192C128 227.3 156.7 256 192 256z"/></svg>
+
+                        <p class="mt-2 text-lg font-normal text-green-600">7th Floor, Block C, Secretariat Complex, Sapele Road,<br>
+                            Benin City, Edo State, Nigeria.
+                        </p>
+                    </div>
+                    
+                    <!-- Telephone -->
+                    <div class="mt-10 text-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" 
+                        class="w-7 h-7 mx-auto text-green-600" fill="currentColor" viewBox="0 0 512 512">
+                        <path d="M511.2 387l-23.25 100.8c-3.266 14.25-15.79 24.22-30.46 24.22C205.2 512 0 306.8 0 54.5c0-14.66 9.969-27.2 24.22-30.45l100.8-23.25C139.7-2.602 154.7 5.018 160.8 18.92l46.52 108.5c5.438 12.78 1.77 27.67-8.98 36.45L144.5 207.1c33.98 69.22 90.26 125.5 159.5 159.5l44.08-53.8c8.688-10.78 23.69-14.51 36.47-8.975l108.5 46.51C506.1 357.2 514.6 372.4 511.2 387z"/></svg>
+                        
+                        <p class="mt-2 text-lg font-normal text-green-600">+234 909 601 5355<br></p>
+                    </div>
+
+
+                    <!-- Website -->
+                    <div class="mt-10 text-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" 
+                        class="w-7 h-7 mx-auto text-green-600" fill="currentColor" viewBox="0 0 512 512">
+                        <path d="M352 256C352 278.2 350.8 299.6 348.7 320H163.3C161.2 299.6 159.1 278.2 159.1 256C159.1 233.8 161.2 212.4 163.3 192H348.7C350.8 212.4 352 233.8 352 256zM503.9 192C509.2 212.5 512 233.9 512 256C512 278.1 509.2 299.5 503.9 320H380.8C382.9 299.4 384 277.1 384 256C384 234 382.9 212.6 380.8 192H503.9zM493.4 160H376.7C366.7 96.14 346.9 42.62 321.4 8.442C399.8 29.09 463.4 85.94 493.4 160zM344.3 160H167.7C173.8 123.6 183.2 91.38 194.7 65.35C205.2 41.74 216.9 24.61 228.2 13.81C239.4 3.178 248.7 0 256 0C263.3 0 272.6 3.178 283.8 13.81C295.1 24.61 306.8 41.74 317.3 65.35C328.8 91.38 338.2 123.6 344.3 160H344.3zM18.61 160C48.59 85.94 112.2 29.09 190.6 8.442C165.1 42.62 145.3 96.14 135.3 160H18.61zM131.2 192C129.1 212.6 127.1 234 127.1 256C127.1 277.1 129.1 299.4 131.2 320H8.065C2.8 299.5 0 278.1 0 256C0 233.9 2.8 212.5 8.065 192H131.2zM194.7 446.6C183.2 420.6 173.8 388.4 167.7 352H344.3C338.2 388.4 328.8 420.6 317.3 446.6C306.8 470.3 295.1 487.4 283.8 498.2C272.6 508.8 263.3 512 255.1 512C248.7 512 239.4 508.8 228.2 498.2C216.9 487.4 205.2 470.3 194.7 446.6H194.7zM190.6 503.6C112.2 482.9 48.59 426.1 18.61 352H135.3C145.3 415.9 165.1 469.4 190.6 503.6V503.6zM321.4 503.6C346.9 469.4 366.7 415.9 376.7 352H493.4C463.4 426.1 399.8 482.9 321.4 503.6V503.6z"/></svg>
+                        
+                        <p class="mt-2 text-lg font-normal text-green-600">
+                            <a href="https://www.wcce.org.ng" target="_blank" class="text-green-600 underline underline-offset-4">https://www.wcce.org.ng</a><br>
+                        </p>
+                    </div>
+                                        
+                    
+                    <!-- Email -->
+                    <div class="mt-10 mb-10 text-center">
+                        <svg xmlns="http://www.w3.org/2000/svg" 
+                        class="w-7 h-7 mx-auto text-green-600" fill="currentColor" viewBox="0 0 512 512">
+                        <path d="M464 64C490.5 64 512 85.49 512 112C512 127.1 504.9 141.3 492.8 150.4L275.2 313.6C263.8 322.1 248.2 322.1 236.8 313.6L19.2 150.4C7.113 141.3 0 127.1 0 112C0 85.49 21.49 64 48 64H464zM217.6 339.2C240.4 356.3 271.6 356.3 294.4 339.2L512 176V384C512 419.3 483.3 448 448 448H64C28.65 448 0 419.3 0 384V176L217.6 339.2z"/></svg>
+                        
+                        <p class="mt-2 text-lg font-normal text-green-600">
+                            <a href="mailto:itc@edostate.gov.ng" class="text-green-600 underline underline-offset-4">mitc@edostate.gov.ng</a>
+                        </p>
+                    </div>
+
                 
                     <!-- Social Media -->
-                    <div class="mt-8 text-green-600 flex justify-center p-0 space-x-6">
+                    <div class="mt-28 text-green-600 flex justify-center space-x-6">
                         <a href="#" class="hover:text-green-400 dark:hover:text-white">
                             <svg class="w-7 h-7" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
                                 <path fill-rule="evenodd"
