code update bmessage_2

--- a/sendmail/templates/bmessage_2.html
+++ b/sendmail/templates/bmessage_2.html
@@ -12,8 +12,11 @@
     </head>
 
     <body class="h-screen bg-gray-100">
+
+        <!-- Content -->
         <div class="font-sans container pb-4 text-center mx-auto bg-white w-[800px]">
-            <img src="{% static 'img/bday-banner.jpg' %}" class="block mx-auto max-w-[800px] w-full h-full">
+            <img src="https://github.com/ethernalarts/mitcbdayapp/raw/master/sendmail/templates/static/img/bday-banner.jpg" 
+                class="block mx-auto max-w-[800px] w-full h-full">
             <img src="{% static 'img/edsg2.png' %}" class="block mx-auto mt-4 max-w-[130px] w-full h-full max-h-[130px]">
             <p class="m-8 mx-auto text-3xl font-bold text-green-600">
                 Dear {{ NAME }},
@@ -37,8 +40,7 @@
                 <br>
             </p>
 
-            <!-- <hr class="text-green-600 m-8 px-8 h-2 mx-auto"> -->
-
+            <!-- Footer -->
             <footer class="container mt-10 px-8 mb-4 bottom-0">
                 <div class="p-4 bg-gray-100">
                     
