--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -1,3 +1,6 @@
+/* Sigmar One */
+@import url('https://fonts.googleapis.com/css2?family=Hind:wght@400;600&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
