--- a/sendmail/templates/index.html
+++ b/sendmail/templates/index.html
@@ -1,4 +1,5 @@
 {% load static tailwind_tags %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,26 +11,50 @@
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-green-200 font-sans leading-normal tracking-normal">
-		<div class="container mx-auto grid grid-rows-4 grid-flow-col gap-4">
-			<section class="flex items-center justify-center h-screen">
-				<!-- <h1 class="text-5xl">Django + Tailwind = ❤️</h1> -->
-				<button type="button" class="inline-flex items-center px-4 py-2 border border-green-200 rounded-md shadow-sm 
-										text-lg font-medium text-white-700 bg-green-700 hover:bg-green-200 focus:outline-none 
-										focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-					<a>Add a Staff</a>
+	<body class="bg-gray-400 font-sans leading-normal tracking-normal">
+		<div class="container mx-auto">
+			<!-- Edit -->
+			<section class="flex items-center justify-center h-screen" role="group">
+				<!-- <h1 class="text-5xl">Django + Tailwind = ❤️</h1><br> -->
+				<button type="button" class="inline-flex items-center px-4 py-2 border border-stone-800 rounded-md shadow-sm 
+										text-lg font-normal text-white bg-stone-900 hover:bg-stone-800 focus:outline-none 
+										focus:ring-2 focus:ring-offset-2 focus:ring-stone-800">
+					<a href="{% url 'add-staff' %}">
+						Add a Staff
+					</a>
 				</button>
-				<button type="button" class="inline-flex items-center px-4 py-2 border border-green-300 rounded-md shadow-sm 
-										text-lg font-medium text-white-700 bg-indigo-600 hover:bg-gray-50 focus:outline-none 
+				<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-green-600 rounded-md shadow-sm 
+										text-lg font-normal text-white bg-green-600 hover:bg-green-700 focus:outline-none 
+										focus:ring-2 focus:ring-offset-2 focus:ring-green-600">
+					<a>Update a Staff</a>
+				</button>
+				<button type="button" class="inline-flex items-center px-4 py-2 border border-red-600 rounded-md shadow-sm 
+										text-lg font-normal text-white bg-red-700 hover:bg-red-600 focus:outline-none 
+										focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
+					<a>Remove a Staff</a>
+				</button>
+				<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-indigo-600 rounded-md shadow-sm 
+										text-lg font-normal text-white bg-indigo-700 hover:bg-indigo-600 focus:outline-none 
+										focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+					<a href="{% url 'birthday' %}" target="_blank">
+						Check for Birthdays
+					</a>
+				</button>
+			</section>
+
+			<!-- Birthday check -->
+			<!-- <section class="flex items-center justify-center mt-[-80]">
+				<button type="button" class="inline-flex items-center px-4 py-2 border border-green-600 rounded-md shadow-sm 
+										text-2xl font-medium text-white bg-green-700 hover:bg-green-600 focus:outline-none 
+										focus:ring-2 focus:ring-offset-2 focus:ring-green-600">
+					<a>Check for Birthdays</a>
+				</button>
+				<button type="button" class="inline-flex items-center px-4 py-2 border border-indigo-600 rounded-md shadow-sm 
+										text-2xl font-medium text-white bg-blue-800 hover:bg-blue-700 focus:outline-none 
 										focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
 					<a>Update a Staff</a>
 				</button>
-				<button type="button" class="inline-flex items-center px-4 py-2 border border-green-300 rounded-md shadow-sm 
-										text-lg font-medium text-white-700 bg-indigo-600 hover:bg-gray-50 focus:outline-none 
-										focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-					<a>Remove a Staff</a>
-				</button>
-			</section>
+			</section> -->
 		</div>
 	</body>
 </html>
