--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -1,85 +1,76 @@
 {% load static tailwind_tags %}
 {% load static %}
+{% load widget_tweaks %}
+
 
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-    <title>Django Tailwind</title>
+    <title>Add a Staff</title>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-gray-400 font-sans leading-normal tracking-normal">
-		<div class="container mx-auto">
-			<!-- Edit -->
-			<section class="flex items-center justify-center h-screen" role="group">
-                <form action="" method="post" class="w3-large" enctype="multipart/form-data">
+	<body class="bg-gray-100 font-sans leading-normal tracking-normal">
+        <div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
+            <div class="max-w-md w-full space-y-8">
+                <div>
+                    <img class="mx-auto h-16 w-auto" src="{% static 'img/mitc-logo-trans.png' %}"
+                        alt="Workflow">
+                    <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">Add a Staff</h2>
+                </div>
+                <form class="mt-8 space-y-6" action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <table>
+                    <input type="hidden" name="remember" value="true">
+
+                    <div class="space-y-px">                        
                         {% for field in form %}
-                            <div class="w3-block">
-                                <div class="w3-section">
-                                    {% for error in field.errors %}
-                                    <div class="row">
-                                        <div class="alert alert-danger">{{error}}</div>
-                                    </div>
-                                    {% endfor %}
-                                </div>
-                                <div class="w3-section">
-                                    <b>{{ field.label_tag }}</b>
-                                    <div>
-                                        <span>{{ field }}</span><br>
-                                        {% if field.help_text %}
-                                            <em>{{ field.help_text }}</em>
-                                        {% endif %}
-                                    </div>
-                                </div>
+                            <div>
+                                {% render_field field class+="text-3xl relative block w-full p-3 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder=field.label %}                
+                                
                             </div>
                         {% endfor %}
-                    </table><br>
-                    <input class="w3-btn w3-light-green w3-round" type="submit" value="Add Book">
-                </form> 
-			</section>
-		</div>
-	</body>
-</html>
 
 
-
-{% extends "base_generic.html" %}
-
-{% block content %}
-    <div class="w3-container" style="margin-top:80px">       
-        <h1 class="w3-xxlarge"><b>Add a Book</b></h1>
-        <hr style="width:50px;border:5px solid red" class="w3-square"><br>
-
-        <form action="" method="post" class="w3-large" enctype="multipart/form-data">
-            {% csrf_token %}
-            <table>
-                {% for field in form %}
-                    <div class="w3-block">
-                        <div class="w3-section">
-                            {% for error in field.errors %}
-                            <div class="row">
-                                <div class="alert alert-danger">{{error}}</div>
-                            </div>
-                            {% endfor %}
+                    </div>
+                        <!-- <input id="email-address" name="email" type="email" autocomplete="email" required
+                                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                                placeholder="Email address">   -->
+        
+                    <div class="flex items-center justify-between">
+                        <div class="flex items-center">
+                            <input id="remember-me" name="remember-me" type="checkbox"
+                                class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
+                            <label for="remember-me" class="ml-2 block text-sm text-gray-900"> Remember me </label>
                         </div>
-                        <div class="w3-section">
-                            <b>{{ field.label_tag }}</b>
-                            <div>
-                                <span>{{ field }}</span><br>
-                                {% if field.help_text %}
-                                    <em>{{ field.help_text }}</em>
-                                {% endif %}
-                            </div>
+        
+                        <div class="text-sm">
+                            <a href="{% url 'index' %}" class="font-medium text-indigo-600 hover:text-indigo-500">Back to Home</a>
                         </div>
                     </div>
-                {% endfor %}
-            </table><br>
-            <input class="w3-btn w3-light-green w3-round" type="submit" value="Add Book">
-        </form>  
-    </div>
-{% endblock %}
+        
+                    <div>
+                        <button type="submit"
+                            class="group relative w-full flex justify-center py-2 px-4 border border-transparent 
+                                text-md font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none 
+                                focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+                            <span class="absolute left-0 inset-y-0 flex items-center pl-3">
+                                <!-- Heroicon name: solid/lock-closed -->
+                                <svg class="h-5 w-5 text-indigo-500 group-hover:text-indigo-400"
+                                    xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"
+                                    aria-hidden="true">
+                                    <path fill-rule="evenodd"
+                                        d="M5 9V7a5 5 0 0110 0v2a2 2 0 012 2v5a2 2 0 01-2 2H5a2 2 0 01-2-2v-5a2 2 0 012-2zm8-2v2H7V7a3 3 0 016 0z"
+                                        clip-rule="evenodd" />
+                                </svg>
+                            </span>
+                            Add
+                        </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+	</body>
+</html>
