--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -13,47 +13,35 @@
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-gray-100 font-sans leading-normal tracking-normal">
-        <div class="min-h-full flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8">
-            <div class="max-w-md w-full space-y-8">
+	<body class="bg-gray-200 font-sans leading-normal tracking-normal">
+        <div class="min-h-full flex items-center justify-center py-8 px-4 sm:px-6 lg:px-8">
+            <div class="max-w-md w-full space-y-px">
+                <!-- Add a Staff title -->
                 <div>
-                    <img class="mx-auto h-16 w-auto" src="{% static 'img/mitc-logo-trans.png' %}"
-                        alt="Workflow">
-                    <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">Add a Staff</h2>
+                    <!-- <img class="mx-auto h-16 w-auto" src="{% static 'img/mitc-logo-trans.png' %}"
+                        alt="Workflow"> -->
+                    <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">ADD A STAFF</h2>
                 </div>
+                
+                <!-- Form -->
                 <form class="mt-8 space-y-6" action="" method="POST" enctype="multipart/form-data">
                     {% csrf_token %}
                     <input type="hidden" name="remember" value="true">
 
+                    <!-- Form fields -->
                     <div class="space-y-px">                        
                         {% for field in form %}
                             <div>
-                                {% render_field field class+="text-3xl relative block w-full p-3 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder=field.label %}                
-                                
+                                {% render_field field class+="text-2xl font-medium relative block w-full p-3 rounded-md border border-gray-400 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder=field.label %}                                                
                             </div>
                         {% endfor %}
-
-
-                    </div>
-                        <!-- <input id="email-address" name="email" type="email" autocomplete="email" required
-                                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
-                                placeholder="Email address">   -->
-        
-                    <div class="flex items-center justify-between">
-                        <div class="flex items-center">
-                            <input id="remember-me" name="remember-me" type="checkbox"
-                                class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-                            <label for="remember-me" class="ml-2 block text-sm text-gray-900"> Remember me </label>
-                        </div>
-        
-                        <div class="text-sm">
-                            <a href="{% url 'index' %}" class="font-medium text-indigo-600 hover:text-indigo-500">Back to Home</a>
-                        </div>
                     </div>
         
+        
+                    <!-- Submit Button -->
                     <div>
                         <button type="submit"
-                            class="group relative w-full flex justify-center py-2 px-4 border border-transparent 
+                            class="group relative w-full flex justify-center py-3 px-4 border border-transparent 
                                 text-md font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none 
                                 focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                             <span class="absolute left-0 inset-y-0 flex items-center pl-3">
@@ -70,6 +58,12 @@
                         </button>
                     </div>
                 </form>
+                         
+                <!-- Back to Home page -->
+                <div class="container mx-auto flex items-center justify-between">
+                    <a href="{% url 'index' %}"
+                        class="text-md font-medium text-indigo-600 hover:underline hover:underline-offset-2">Back to Home</a>
+                </div>
             </div>
         </div>
 	</body>
