--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -32,7 +32,8 @@
                     <div class="space-y-px">                        
                         {% for field in form %}
                             <div>
-                                {% render_field field class+="text-2xl font-medium relative block w-full p-3 rounded-md border border-gray-400 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" placeholder=field.label %}                                                
+                                {% render_field field  placeholder=field.label class+="text-2xl font-medium relative block w-full p-3 rounded-md border border-gray-400 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                                
+                                {{ field.help_text }}
                             </div>
                         {% endfor %}
                     </div>        
