--- a/sendmail/templates/index.html
+++ b/sendmail/templates/index.html
@@ -18,53 +18,57 @@
 				<!-- <h1 class="text-5xl">Django + Tailwind = ❤️</h1><br> -->
 				
 				<!-- Add -->
-				<button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
-										text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
-										focus:ring-2 focus:ring-offset-2 focus:ring-green-600">
-					<!-- Heroicon name: solid/pencil -->
-					<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-						<path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
-					</svg>
-					<a href="{% url 'add-staff' %}">
-						Add a Staff
-					</a>
-				</button>
+				<a href="{% url 'add-staff' %}">
+					<button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+											text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
+											focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
+						<!-- Heroicon name: solid/pencil -->
+						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+							<path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
+						</svg>
+							Add a Staff						
+					</button>				
+				</a>
 
 				<!-- Update -->
-				<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-gray-300 rounded-md shadow-sm 
-										text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
-										focus:ring-2 focus:ring-offset-2 focus:ring-green-600">
-					<svg class="-ml-1 mr-2 h-5 w-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-						<path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
-					</svg>
-					<a>Update a Staff</a>
-				</button>
+				<a>
+					<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+											text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
+											focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
+						<svg class="-ml-1 mr-2 h-5 w-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+							<path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
+						</svg>
+						Update a Staff
+					</button>
+				</a>
 
-				<!-- Check for Birthday -->
-				<button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
-										text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
-										focus:ring-2 focus:ring-offset-2 focus:ring-green-600">
-					<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-gray-500 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-						stroke-width="2">
-						<path stroke-linecap="round" stroke-linejoin="round"
-							d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z" />
-					</svg>
-					<a href="{% url 'birthday' %}" target="_blank">
-						Check for Birthdays
-					</a>
-				</button>
+				<!-- Check for Birthday -->				
+				<a href="{% url 'birthday' %}" target="_blank">
+					<button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
+											text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
+											focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
+						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+							stroke-width="2">
+							<path stroke-linecap="round" stroke-linejoin="round"
+								d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z" />
+						</svg>						
+						Check for Birthdays					
+					</button>
+				</a>
 
 				<!-- Delete -->
-				<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-red-600 rounded-md shadow-sm 
-										text-lg font-medium text-white bg-red-600 hover:bg-red-700 focus:outline-none 
-										focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
-					<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"
-						stroke-width="2">
-						<path stroke-linecap="round" stroke-linejoin="round"
-							d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
-					</svg>
-					<a>Remove a Staff</a>
-				</button>
+				<a>
+					<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-red-600 rounded-md shadow-sm 
+											text-lg font-medium text-white bg-red-600 hover:bg-red-700 focus:outline-none 
+											focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
+						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-white h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+							stroke-width="2">
+							<path stroke-linecap="round" stroke-linejoin="round"
+								d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16" />
+						</svg>
+						Remove a Staff
+					</button>
+				</a>
 			</section>
 		</div>
 	</body>
