code update 1:37pm 06/06/2022

--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -34,14 +34,14 @@
                 <section class="-mt-4">
                     <!-- First Name -->
                     <div>
-                        <p class="font-medium text-gray-700">First Name</p>
+                        <p class="font-medium text-gray-500 lg:text-gray-500">First Name</p>
                         <p class="text-2xl text-gray-700 font-bold">{{ staff.first_name }}</p>
                         <br>
                     </div>
 
                     <!-- Middle Name -->
                     <div>
-                        <p class="font-medium text-gray-700">Middle Name</p>                        
+                        <p class="font-medium text-gray-500 lg:text-gray-500">Middle Name</p>                        
                         <p class="text-2xl text-gray-700 font-bold">
                             {% if staff.middle_name %}
                                 {{ staff.middle_name }}                            
@@ -54,28 +54,28 @@
 
                     <!-- Last Name -->
                     <div>
-                        <p class="font-medium text-gray-700">Last Name</p>
+                        <p class="font-medium text-gray-500 lg:text-gray-500">Last Name</p>
                         <p class="text-2xl text-gray-700 font-bold">{{ staff.last_name }}</p>
                         <br>
                     </div>
 
                     <!-- Phone Number -->
                     <div>
-                        <p class="font-medium text-gray-700">Phone Number</p>
+                        <p class="font-medium text-gray-500 lg:text-gray-500">Phone Number</p>
                         <p class="text-2xl text-gray-700 font-bold">{{ staff.phone_number }}</p>
                         <br>
                     </div>
 
                     <!-- Email -->
                     <div>
-                        <p class="font-medium text-gray-700">Email</p>
+                        <p class="font-medium text-gray-500 lg:text-gray-500">Email</p>
                         <p class="text-2xl text-gray-700 font-bold">{{ staff.email }}</p>
                         <br>
                     </div>
 
                     <!-- Birthday -->
                     <div>
-                        <p class="font-medium text-gray-700">Birthday</p>
+                        <p class="font-medium text-gray-500 lg:text-gray-500">Birthday</p>
                         <p class="text-2xl text-gray-700 font-bold">{{ staff.birth_month }} {{ staff.birth_day }}</p>
                         <br>
                     </div>
@@ -90,8 +90,7 @@
                                                 text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
                                                 focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
                             <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
-                                <path
-                                    d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
+                                <path d="M10.707 2.293a1 1 0 00-1.414 0l-7 7a1 1 0 001.414 1.414L4 10.414V17a1 1 0 001 1h2a1 1 0 001-1v-2a1 1 0 011-1h2a1 1 0 011 1v2a1 1 0 001 1h2a1 1 0 001-1v-6.586l.293.293a1 1 0 001.414-1.414l-7-7z" />
                             </svg>
                             Back to Index
                         </button>
@@ -99,9 +98,9 @@
 
                     <!-- Update -->
                     <a>
-                        <button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-greeny-500 rounded-md shadow-sm 
-                                                text-sm font-medium text-white bg-green-500 hover:bg-green-400 focus:outline-none 
-                                                focus:ring-2 focus:ring-offset-2 focus:ring-green-300">
+                        <button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-green-500 rounded-md shadow-sm 
+                                                text-sm font-medium text-white bg-green-600 hover:border-green-500 hover:bg-green-500 
+                                                focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-300">
                             <svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                                 <path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
                             </svg>
@@ -112,8 +111,8 @@
                     <!-- Remove -->
                     <a>
                         <button type="button" class="inline-flex items-center px-4 py-2 border border-red-600 rounded-md shadow-sm 
-                                                text-sm font-medium text-white bg-red-600 hover:bg-red-700 focus:outline-none 
-                                                focus:ring-2 focus:ring-offset-2 focus:ring-red-300">
+                                                text-sm font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
+                                                focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-300">
                             <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-white" fill="none" viewBox="0 0 24 24" stroke="currentColor"
                                 stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round"
