--- a/sendmail/templates/index.html
+++ b/sendmail/templates/index.html
@@ -11,7 +11,7 @@
 		{% tailwind_css %}
 	</head>
 
-	<body class="bg-gray-50 font-sans leading-normal tracking-normal">
+	<body class="bg-gray-50 font-sans">
 		<div class="container mx-auto">
 			<!-- Edit -->
 			<section class="flex items-center justify-center h-screen" role="group">
@@ -23,7 +23,7 @@
 											text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
 											focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
 						<!-- Heroicon name: solid/pencil -->
-						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-gray-500" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5 text-gray-700" fill="currentColor" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
 							<path stroke-linecap="round" stroke-linejoin="round" d="M12 4v16m8-8H4" />
 						</svg>
 							Add a Staff						
@@ -32,10 +32,10 @@
 
 				<!-- Update -->
 				<a>
-					<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-gray-300 rounded-md shadow-sm 
-											text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
-											focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
-						<svg class="-ml-1 mr-2 h-5 w-5 text-gray-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+					<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-green-600 rounded-md shadow-sm 
+											text-lg font-medium text-white bg-green-600 hover:border-green-500 hover:bg-green-500 
+											focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-300">
+						<svg class="-ml-1 mr-2 h-5 w-5 text-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
 							<path d="M13.586 3.586a2 2 0 112.828 2.828l-.793.793-2.828-2.828.793-.793zM11.379 5.793L3 14.172V17h2.828l8.38-8.379-2.83-2.828z" />
 						</svg>
 						Update a Staff
@@ -44,10 +44,10 @@
 
 				<!-- Check for Birthday -->				
 				<a href="{% url 'birthday' %}" target="_blank">
-					<button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
-											text-lg font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
-											focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
-						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-gray-500 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
+					<button type="button" class="inline-flex items-center px-4 py-2 border border-indigo-700 rounded-md shadow-sm 
+											text-lg font-medium text-white bg-indigo-700 hover:border-indigo-600 hover:bg-indigo-600 
+											focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-300">
+						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-white h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
 							stroke-width="2">
 							<path stroke-linecap="round" stroke-linejoin="round"
 								d="M21 15.546c-.523 0-1.046.151-1.5.454a2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.704 2.704 0 00-3 0 2.704 2.704 0 01-3 0 2.701 2.701 0 00-1.5-.454M9 6v2m3-2v2m3-2v2M9 3h.01M12 3h.01M15 3h.01M21 21v-7a2 2 0 00-2-2H5a2 2 0 00-2 2v7h18zm-3-9v-2a2 2 0 00-2-2H8a2 2 0 00-2 2v2h12z" />
@@ -59,8 +59,8 @@
 				<!-- Delete -->
 				<a>
 					<button type="button" class="inline-flex items-center mx-4 px-4 py-2 border border-red-600 rounded-md shadow-sm 
-											text-lg font-medium text-white bg-red-600 hover:bg-red-700 focus:outline-none 
-											focus:ring-2 focus:ring-offset-2 focus:ring-red-500">
+											text-lg font-medium text-white bg-red-600 hover:border-red-500 hover:bg-red-500 
+											focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-300">
 						<svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 text-white h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"
 							stroke-width="2">
 							<path stroke-linecap="round" stroke-linejoin="round"
