--- a/sendmail/templates/addstaff.html
+++ b/sendmail/templates/addstaff.html
@@ -29,18 +29,12 @@
                     <input type="hidden" name="remember" value="true">
 
                     <!-- Form fields -->
-                    <div class="space-y-px">                        
-                        {% for field in form %}                
-                            {% if field.image %}                                
-                                <div>
-                                    <p class="font-bold text-gray-700">{{ field.image.label_tag }}</p>                                    
-                                    {% render_field field.image type=image class+="lg:text-md font-medium relative block w-full p-3 border border-gray-400 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                
-                                </div>    
-                                {% else %}
-                                    <div>
-                                        {% render_field field placeholder=field.label class+="lg:text-md font-medium relative block w-full p-3 border border-gray-400 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                
-                                    </div>        
-                            {% endif %}
+                    <div class="space-y-4">                        
+                        {% for field in form %}                                
+                            <div>
+                                <!-- <p class="font-bold text-gray-700">{{ field.label_tag }}</p>                                     -->
+                                {% render_field field placeholder=field.label class+="lg:text-md font-medium relative block w-full p-3 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm" %}                                  
+                            </div> 
                         {% endfor %}
                     </div>        
         
