--- a/sendmail/templates/staffdetails.html
+++ b/sendmail/templates/staffdetails.html
@@ -85,14 +85,14 @@
                 <div class="mt-4 -mb-4 mx-auto flex float-right">
 
                     <!-- Back to Index -->
-                    <a  href="{% url 'index' %}">
+                    <a  href="{% url 'stafflist' %}">
                         <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
                                                 text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
                                                 focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
                             <svg xmlns="http://www.w3.org/2000/svg" class="-ml-1 mr-2 h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
                             </svg>
-                            Dashboard
+                            Stafflist
                         </button>
                     </a>
 
