--- a/sendmail/templates/stafflist.html
+++ b/sendmail/templates/stafflist.html
@@ -17,8 +17,8 @@
         <div class="p-4 max-w-3xl bg-white rounded-lg border mx-auto shadow-md sm:p-8 min-h-full justify-center">
             <div class="flex justify-between items-center mb-4">
                 <h5 class="text-3xl font-bold leading-none text-gray-900 dark:text-white">Staff List</h5>
-                <a href="#" class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
-                    View all
+                <a href="{% url 'index' %}" class="text-sm font-medium text-blue-600 hover:underline dark:text-blue-500">
+                    Dashboard
                 </a>
             </div>
             <div class="flow-root">
@@ -29,8 +29,8 @@
                             <!-- Profile Picture -->
                             <div class="flex items-center space-x-4">
                                 <div class="flex-shrink-0">
-                                    <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-1.jpg"
-                                        alt="Neil image">
+                                    <img class="w-8 h-8 rounded-full" src="{{ staff.image.url }}"
+                                        alt="{{ staff.first_name }}'s' image">
                                 </div>
                                 
                                 <!-- Name and Email -->
@@ -51,7 +51,7 @@
                                 <div class="inline-flex items-center text-base font-semibold text-gray-900 dark:text-white">
 
                                 <!-- View Profile Button -->
-                                <a href="{% url 'index' %}">
+                                <a href="{% url 'staffdetails' staff.id %}">
                                     <button type="button" class="inline-flex items-center px-4 py-2 border border-gray-300 rounded-md shadow-sm 
                                                                                                 text-sm font-medium text-gray-700 bg-white hover:bg-gray-50 focus:outline-none 
                                                                                                 focus:ring-2 focus:ring-offset-2 focus:ring-gray-300">
@@ -77,7 +77,7 @@
                 <div class="container font-medium text-gray-500 text-lg flex items-center justify-center mt-8 mb-4 pagination ">
                     <span class="page-links flex items-center justify-between">
                         {% if page_obj.has_previous %}
-                            <a class="inline-flex items-center font-medium text-sm px-4 py-2 hover:bg-gray-50 bg-white text-gray-700 rounded-md border border-gray-300" 
+                            <a class="inline-flex items-center font-medium text-sm p-2 hover:bg-gray-50 bg-white text-gray-700 rounded-md border border-gray-300" 
                                 href="{{ request.path }}?page={{ page_obj.previous_page_number }}">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="mx-1 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7" />
@@ -88,7 +88,7 @@
                             page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}
                         </span>
                         {% if page_obj.has_next %}
-                            <a class="inline-flex items-center font-medium text-sm px-4 py-2 bg-white hover:bg-gray-50 text-gray-700 rounded-md border border-gray-300" 
+                            <a class="inline-flex items-center font-medium text-sm p-2 bg-white hover:bg-gray-50 text-gray-700 rounded-md border border-gray-300" 
                                 href="{{ request.path }}?page={{ page_obj.next_page_number }}">
                                 <svg xmlns="http://www.w3.org/2000/svg" class="mx-1 h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                                     <path stroke-linecap="round" stroke-linejoin="round" d="M9 5l7 7-7 7" />
